--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="w3-container w3-center w3-padding-32" id="home">
       <img style="width: 80%;max-width: 320px" alt="profile photo" src="images/1.jpg">
       <h1>Tianyu Gu</h1>
-        <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px;text-indent:2em;font-family:"Times New Roman"">
+        <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px;text-indent:2em">
           I am a final-year graduate student at school of civil enginerring, <a href="https://en.tongji.edu.cn/">Tongji University</a>, Shanghai. Co-advised by Prof. Xianzhong Zhao and Prof. Liang-Jiu Jia, I work on earthquake engineering, ductile fracture, and multi-scale analysis, etc. Before that, I got my undergraduate degree at school of civil engineering, <a href="https://www.pku.edu.cn/">Southwest Jiaotong University</a> (SWJTU) in 2019.
         </p>
         <p class="w3-center">
@@ -273,6 +273,7 @@
   <!-- The Awards Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="award">
     <h2>Awards</h2>
+	<p class="w3-left-align" style="line-height:150%">
     <p><li> 2021, China National Scholarship for Graduate Students
     <p><li> 2019, Outstanding Graduate Student of Sichuan Province</p> 
     <p><li> 2019, Excellent Undergraduate Thesis in SWJTU</p> 
@@ -287,6 +288,7 @@
     <p><li> 2016, 2nd Prize in Structure Design Competition of SWJTU</p>
     <p><li> 2016, Top-Grade Scholarship of SWJTU</p>
     <p><li> 2016, China National Scholarship for Undergraduate Students</p>
+	</p>
   </div> 
   
   <!-- The Contact Section -->
