--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <img style="width: 80%;max-width: 320px" alt="profile photo" src="images/1.jpg">
       <h1>Tianyu Gu</h1>
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px;text-indent:2em">
-          I am a final-year graduate student at school of civil enginerring, <a href="https://en.tongji.edu.cn/">Tongji University</a>, Shanghai. Co-advised by Prof. Xianzhong Zhao and Prof. Liang-Jiu Jia, I work on earthquake engineering, ductile fracture, and multi-scale analysis, etc. Before that, I got my undergraduate degree at school of civil engineering, <a href="https://www.pku.edu.cn/">Southwest Jiaotong University</a> (SWJTU) in 2019.
+          I am a graduate student at School of Civil Enginerring, <a href="https://en.tongji.edu.cn/">Tongji University</a>, Shanghai. Co-advised by Prof. Xianzhong Zhao and Prof. Liang-Jiu Jia, I work on earthquake engineering, ductile fracture, and multi-scale analysis, etc. Before that, I got my undergraduate degree at School of Civil Engineering, <a href="https://www.pku.edu.cn/">Southwest Jiaotong University</a> (SWJTU) in 2019.
         </p>
         <p class="w3-center">
           <a href="https://scholar.google.com/citations?hl=en&user=w8yHNaEAAAAJ">Google Scholar</a> &nbsp/&nbsp
@@ -246,7 +246,7 @@
         This study proposed and investigated a type of all-steel damage-detectable <strong>brace-type shear fuse</strong> (BSF) with uncoupled strength and stiffness. <strong>Cyclic experiments</strong>, <strong>theoretical analyses</strong> and <strong>numerical simulations</strong> were conducted to five specimens. Design formulae were proposed and design procedures were given. Finally, <strong>time-history analyses</strong> of structures with and without BSF braces were conducted under eight different earthquake waves, and it was proved that BSF can efficiently reduce the seismic response of structures.
         </p> 
         
-        <h4><li>Experimental Study on Shear Behavior of RC Beams Strengthened with FRP and ECC</li></h4>
+        <h4><li>Experimental Study on Shear and Bending Behaviors of RC Beams Strengthened with FRP and ECC</li></h4>
         <h5><em>Dec. 2018 – May. 2019, Chengdu</em></h5>
         </p>
         <img style="width:96%;" src="images/frp.jpg"> 
