--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
   <div class="w3-container w3-display-container w3-padding-16">
     <h3><b>Menu</b></h3>
   </div>
-  <div class="w3-padding-64 w3-text-white w3-large" style="font-weight:bold">
-    <a href="#home" class="w3-bar-item w3-button">Home</a>
-    <a href="#publications" class="w3-bar-item w3-button">Publications</a>
-	<a href="#projects" class="w3-bar-item w3-button">Projects</a>
-    <a href="#award" class="w3-bar-item w3-button">Awards</a>
-    <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+  <div class="w3-padding-64 w3-text-DarkSeaGreen w3-large" style="font-weight:bold">
+    <a href="#home" class="w3-bar-item w3-button w3-white">Home</a>
+    <a href="#publications" class="w3-bar-item w3-button w3-white">Publications</a>
+	<a href="#projects" class="w3-bar-item w3-button w3-white">Projects</a>
+    <a href="#award" class="w3-bar-item w3-button w3-white">Awards</a>
+    <a href="#contact" class="w3-bar-item w3-button w3-white">Contact</a>
   </div>
 </nav>
 
