--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <link rel="stylesheet" href="w3.css">
 
   <style>
-  .w3-sidebar a {font-family: "Times New Roman", sans-serif}
-  body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Times New Roman", sans-serif;}
+  .w3-sidebar a {font-family: "Georgia", sans-serif}
+  body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Georgia", sans-serif;}
   </style>
 
   <link rel="icon" type="image/jpg" href="images/icons.jpg">
