--- a/index.html
+++ b/index.html
@@ -302,16 +302,22 @@
 
     Welcome to use this website's <a href="https://github.com/GuGuaTT/GuGuaTT.github.io">source code</a>. </br>
 
-	© 2021 Tongji T.Y. Gu | Thanks for your visit No.
-  <script type="text/javascript">
-  var sc_project=12347113; 
-  var sc_invisible=0; 
-  var sc_security="21aca5d1"; 
-  var sc_https=1; 
-  var scJsHost = "https://";
-  document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+
-  "statcounter.com/counter/counter.js'></"+"script>");
-  </script>
+	© 2021 Tongji T.Y. Gu | Thanks for your visit
+	
+	<!-- Default Statcounter code for Tianyu Gu's  Homepage
+	https://guguatt.github.io/ -->
+	<script type="text/javascript">
+	var sc_project=12609576; 
+	var sc_invisible=1; 
+	var sc_security="a1dd0bd5"; 
+	</script>
+	<script type="text/javascript"
+	src="https://www.statcounter.com/counter/counter.js" async></script>
+	<noscript><div class="statcounter"><a title="Web Analytics"
+	href="https://statcounter.com/" target="_blank"><img class="statcounter"
+	src="https://c.statcounter.com/12609576/0/a1dd0bd5/1/" alt="Web Analytics"
+	referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+	<!-- End of Statcounter Code -->
 
   </div>
 
