--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <img style="width: 80%;max-width: 320px" alt="profile photo" src="images/1.jpg">
       <h1>Tianyu Gu</h1>
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px;text-indent:2em">
-          I am a graduate student at School of Civil Enginerring, <a href="https://en.tongji.edu.cn/">Tongji University</a>, Shanghai. Co-advised by Prof. Xianzhong Zhao and Prof. Liang-Jiu Jia, I work on earthquake engineering, ductile fracture, and multi-scale analysis, etc. Before that, I got my undergraduate degree at School of Civil Engineering, <a href="https://www.pku.edu.cn/">Southwest Jiaotong University</a> (SWJTU) in 2019.
+          I am a graduate student at School of Civil Enginerring, <a href="https://en.tongji.edu.cn/">Tongji University</a>, Shanghai. Co-advised by Prof. Xianzhong Zhao and Prof. Liang-Jiu Jia, I work on earthquake engineering, ductile fracture, and multi-scale analysis, etc. Before that, I obtained my undergraduate degree at School of Civil Engineering, <a href="https://www.pku.edu.cn/">Southwest Jiaotong University</a> (SWJTU) in 2019.
         </p>
         <p class="w3-center">
           <a href="https://scholar.google.com/citations?hl=en&user=w8yHNaEAAAAJ">Google Scholar</a> &nbsp/&nbsp
@@ -207,7 +207,7 @@
 
         </p>
         <p class="w3-justify" style="text-indent:2em">
-        This study aims to investigate mechanical behaviors of a novel <strong>meta steel with auxetic effect</strong> (termed as NPR steel) with high strength and ductility, compare it with conventional structural steels and establish a unified full-plasticity model. I conducted an experiment towards different types of steel coupons with different gauge lengths using <strong>digital image correlation (DIC)</strong>, and then conducted numerical analyses to simulate their ductile fracture behaviors. A curious <strong>“necking lag effect”</strong> was observed for mild steels, which can significantly affect their post-necking ductility and cause inaccuracy in numerical simulation. For this reason, a <strong>new post-necking true stress – true strain modification method</strong> with minor size effect was proposed to establish unified full-range plasticity till fracture of different types of steels, and it functioned well to capture their ductile fracture behaviors.
+        This study aims to investigate mechanical behaviors of a novel <strong>meta steel with auxetic effect</strong> (termed as NPR steel) with high strength and ductility, compare it with conventional structural steels and establish a unified full-range plasticity model. I conducted an experiment towards different types of steel coupons with different gauge lengths using <strong>digital image correlation (DIC)</strong>, and then conducted numerical analyses to simulate their ductile fracture behaviors. A curious <strong>“necking lag effect”</strong> was observed for mild steels, which can significantly affect their post-necking ductility and cause inaccuracy in numerical simulation. For this reason, a <strong>new post-necking true stress – true strain modification method</strong> with minor size effect was proposed to establish unified full-range plasticity till fracture of different types of steels, and it functioned well to capture their ductile fracture behaviors.
 
         </p> 
 
@@ -231,7 +231,7 @@
 
         </p>
         <p class="w3-justify" style="text-indent:2em">
-        This study aims to investigate the mechanism of <strong>local bulging</strong> of circular constraint tube of mini-BRB and establish a <strong>mathematical model</strong> for the complex bulging process. Theoretical analyses were conducted based on the rigid-plastic assumption and numerical simulations were conducted for validation. The mathematical model with multiple degrees-of-freedom was simplified through a <strong>numerical algorithm</strong>, and a <strong>design criterion</strong> convenient fur engineering application to prevent bulging was finally given.
+        This study aims to investigate the mechanism of <strong>local bulging</strong> of circular constraint tube of mini-BRB and establish a <strong>mathematical model</strong> for the complex bulging process. Theoretical analyses were conducted based on the plastic line theory and the rigid-plastic assumption, and numerical simulations were conducted for validation. The mathematical model with multiple degrees-of-freedom was simplified through a <strong>numerical algorithm</strong>, and a <strong>design criterion</strong> convenient for engineering application to prevent bulging was finally given.
 
         </p> 
         
@@ -294,7 +294,7 @@
   <div class="w3-container w3-padding-32" id="contact">
     <h2>Contact</h2>
 	  <p><li> Address: Tongji University, No.1239 Siping Rd., Shanghai, China 200092</p>
-      <p><li> <a href="mailto:1932587@tongji.edu.cn">Email</a>: 1932587@tongji.edu.cn</p>
+      <p><li> <a href="mailto:1932587@tongji.edu.cn">Email</a>: 1932587@tongji.edu.cn/ garygutt@tongji.edu.cn</p>
       
   </div>
 
