--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <img style="width: 80%;max-width: 320px" alt="profile photo" src="images/1.jpg">
       <h1>Tianyu Gu</h1>
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px;text-indent:2em">
-          I am a graduate student at School of Civil Enginerring, <a href="https://en.tongji.edu.cn/">Tongji University</a>, Shanghai. Co-advised by Prof. Xianzhong Zhao and Prof. Liang-Jiu Jia, I work on earthquake engineering, ductile fracture, and multi-scale analysis, etc. Before that, I obtained my undergraduate degree at School of Civil Engineering, <a href="https://www.pku.edu.cn/">Southwest Jiaotong University</a> (SWJTU) in 2019.
+          I am a graduate student at School of Civil Enginerring, <a href="https://en.tongji.edu.cn/">Tongji University</a>, Shanghai. Co-advised by Prof. Xianzhong Zhao and Prof. Liang-Jiu Jia, I work on earthquake engineering, ductile fracture and multi-scale analysis, etc. Before that, I obtained my undergraduate degree at School of Civil Engineering, <a href="https://www.pku.edu.cn/">Southwest Jiaotong University</a> (SWJTU), Chengdu in 2019.
         </p>
         <p class="w3-center">
           <a href="https://scholar.google.com/citations?hl=en&user=w8yHNaEAAAAJ">Google Scholar</a> &nbsp/&nbsp
@@ -150,7 +150,7 @@
       <br>
       Liang-Jiu Jia, Chang-Feng Zhou, Rui Zhang, <strong>Tianyu Gu</strong>, Tao Liu, Jinbao Xie, Man-Chao He*, Min Xia*, Bo Chen*
       <br>
-      <em>Science</em> (under review)
+      <em>Science Advances</em> (under review)
       </p>
 
       <p>
