--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
         </p>
         <p class="w3-justify" style="text-indent:2em">
-        This competition encourages undergraduates to construct concrete canoes by themselves and finally have a canoe race together. SWJTU participated in it for the first time in 2018. I was responsible for mechanical design and construction of the <strong>canoe ‘Lotus’</strong> and I made the presentation in Sacramento, California. We won the <strong>6th place</strong> in the Mid Pacific Conference.
+        This competition encourages undergraduates to construct concrete canoes by themselves and finally have a canoe race together. SWJTU participated in it for the first time in 2018. I was responsible for mechanical design and construction of the canoe ‘Lotus’ and I made the presentation in Sacramento, California. We won the 6th place in the Mid Pacific Conference.
 
         </p> 
   </div>
