--- a/index.html
+++ b/index.html
@@ -187,15 +187,15 @@
 
     </p>
 
-        <h4><li>Multi-Scale Analysis on Ductile Fracture of Metal based on Deep Learning (Master thesis, in progress)</li></h4>
-        <h5><em>Nov. 2020 – Present, Shanghai</em></h5>
+        <h4><li>Multi-Scale Analysis on Ductile Fracture of Metal and Micro-Void Growth Model based on Deep Learning (Master Thesis, In Progress)</li></h4>
+        <h5><em>Mar. 2021 – Present, Shanghai</em></h5>
         </p>
         <img style="width:96%;" src="images/multiscale.jpg"> 
         <p class="w3-justify">
         
         </p>
         <p class="w3-justify" style="text-indent:2em">
-        Ductile fracture of metal originates from the growth and coalescence of internal micro-voids. This study aims to investigate the mechanism of macro ductile fracture <strong>from a microscopic perspective</strong>, and it begins with the establishment of a <strong>micro-void growth model</strong>. <strong>In-situ X-ray micro computed tomography experiments</strong> towards steel coupons such as aluminum, mild steel and NPR steel under monotonic tensile loading were conducted, and the X-ray micro-tomographic images were then processed by an <strong>algorithm for automatic void segmentation</strong>. Finally, the images were imported into the 3D reconstruction software Avizo to obtain <strong>real void evolution data</strong> of steel under tension. Based on the huge amounts of void data from experiments and numerical <strong>representative volume element (RVE) analyses</strong>, <strong>deep learning</strong> is adopted to predict the growth of void. 
+        Ductile fracture of metal originates from the growth and coalescence of internal micro-voids. This study aims to investigate the mechanism of macro ductile fracture <strong>from a microscopic perspective</strong>, and it begins with the establishment of a <strong>micro-void growth model</strong>. <strong>In-situ X-ray micro-CT experiments</strong> towards steel coupons such as aluminum and mild steel under monotonic tensile loading were conducted, and the X-ray micro-tomographic images were then processed by an algorithm for automatic void segmentation for 3D reconstruction, so that <strong>real void evolution data</strong> of metal under tension can be obtained. Moreover, void recognition in SEM photos was realized through <strong>convolutional neural network (CNN)</strong>. Based on the huge amounts of void data from experiments and numerical <strong>representative volume element (RVE) analyses</strong>, <strong>recurrent neural network (RNN)</strong> will be adopted to predict the growth of void. 
 
         </p> 
 
@@ -219,7 +219,7 @@
 
         </p>
         <p class="w3-justify" style="text-indent:2em">
-        This proposed and investigated a type of all-steel <strong>mini-BRB with corrugate core bar</strong> (CMBRB) and it has high ductility due to its unique geometry. <strong>Cyclic experiments</strong>, <strong>theoretical analyses</strong> and <strong>numerical simulations</strong> were conducted to six different specimens. Design formulae were proposed and design procedures were given. Moreover, <strong>local buckling analysis</strong> was conducted towards CMBRBs with different configurations, and a criterion to prevent local bulging of restraint tube was proposed.
+        This study proposed and investigated a type of all-steel <strong>mini-BRB with corrugate core bar</strong> (CMBRB) and it has high ductility due to its unique geometry. <strong>Cyclic experiments</strong>, <strong>theoretical analyses</strong> and <strong>numerical simulations</strong> were conducted to six different specimens. Design formulae were proposed and design procedures were given. Moreover, <strong>local buckling analysis</strong> was conducted towards CMBRBs with different configurations, and a criterion to prevent local bulging of restraint tube was proposed.
 
         </p> 
         
@@ -274,6 +274,7 @@
   <div class="w3-container w3-light-grey w3-padding-32" id="award">
     <h2>Awards</h2>
 	<p class="w3-left-align" style="line-height:150%">
+	<p><li> 2021, China National Scholarship for Graduate Students</p> 
     <p><li> 2019, Outstanding Graduate Student of Sichuan Province</p> 
     <p><li> 2019, Excellent Undergraduate Thesis in SWJTU</p> 
     <p><li> 2019, The "Si Shi Yang Hua" Medal (highest student honor in SWJTU)</p> 
