--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <img style="width: 80%;max-width: 320px" alt="profile photo" src="images/1.jpg">
       <h1>Tianyu Gu</h1>
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px;text-indent:2em">
-          I am a graduate student at School of Civil Enginerring, <a href="https://en.tongji.edu.cn/">Tongji University</a>, Shanghai. Co-advised by Prof. Xianzhong Zhao and Prof. Liang-Jiu Jia, I work on earthquake engineering, ductile fracture and multi-scale analysis, etc. Before that, I obtained my undergraduate degree at School of Civil Engineering, <a href="https://www.pku.edu.cn/">Southwest Jiaotong University</a> (SWJTU), Chengdu in 2019.
+          I am a graduate student at School of Civil Enginerring, <a href="https://en.tongji.edu.cn/">Tongji University</a>, Shanghai. Co-advised by Prof. Xianzhong Zhao and Prof. Liang-Jiu Jia, I work on earthquake engineering, fracture and multi-scale analysis, etc. Before that, I obtained my undergraduate degree at School of Civil Engineering, <a href="https://www.pku.edu.cn/">Southwest Jiaotong University</a> (SWJTU), Chengdu in 2019.
         </p>
         <p class="w3-center">
           <a href="https://scholar.google.com/citations?hl=en&user=w8yHNaEAAAAJ">Google Scholar</a> &nbsp/&nbsp
@@ -195,7 +195,7 @@
         
         </p>
         <p class="w3-justify" style="text-indent:2em">
-        Ductile fracture of metal originates from the growth and coalescence of internal micro-voids. This study aims to investigate the mechanism of macro ductile fracture <strong>from a microscopic perspective</strong>, and it begins with the establishment of a <strong>micro-void growth model</strong>. <strong>In-situ X-ray micro-CT experiments</strong> towards steel coupons such as aluminum and mild steel under monotonic tensile loading were conducted, and the X-ray micro-tomographic images were then processed by an algorithm for automatic void segmentation for 3D reconstruction, so that <strong>real void evolution data</strong> of metal under tension can be obtained. Moreover, void recognition in SEM photos was realized through <strong>convolutional neural network (CNN)</strong>. Based on the huge amounts of void data from experiments and numerical <strong>representative volume element (RVE) analyses</strong>, <strong>recurrent neural network (RNN)</strong> will be adopted to predict the growth of void. 
+        Ductile fracture of metal originates from the growth and coalescence of internal micro-voids. This study aims to investigate the mechanism of macro ductile fracture <strong>from a microscopic perspective</strong>, and it begins with the establishment of a <strong>micro-void growth model</strong>. <strong>In-situ X-ray micro-CT experiments</strong> towards metallic coupons such as aluminum and mild steel under monotonic tensile loading were conducted, and the X-ray micro-tomographic images were then processed by an algorithm for automatic void segmentation for 3D reconstruction, so that <strong>real void evolution data</strong> of metal under tension can be obtained. Moreover, void recognition in SEM photos was realized through <strong>convolutional neural network (CNN)</strong>. Based on the huge amounts of void data from experiments and numerical <strong>representative volume element (RVE) analyses</strong>, <strong>recurrent neural network (RNN)</strong> will be adopted to predict the growth of void. 
 
         </p> 
 
